css fix alignment

--- a/static/css/rend.css
+++ b/static/css/rend.css
@@ -155,7 +155,8 @@
         flex-direction: column;
     }
     .content .gener_param_block {
-        width: 90%;
+        width: 100%;
+        margin: 0 10px;
         padding-top: 20px;
     }
     .content .gener_param_block form .gener, .save {
